--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,45 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>SocialMediaCleanUp</artifactId>
     <groupId>org.techieworld.SocialMediaCleanUp</groupId>
-    <version>0.1</version>
+    <version>0.0.1</version>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.0</version>
+                <configuration>
+                  <source>1.6</source>
+                  <target>1.6</target>
+                </configuration>
+            </plugin>
+            <plugin>
+               <artifactId>maven-assembly-plugin</artifactId>
+               <version>2.4</version>
+               <configuration>
+                 <descriptorRefs>
+                   <descriptorRef>jar-with-dependencies</descriptorRef>
+                 </descriptorRefs>
+                 <archive>
+                   <manifest>
+		      	    <mainClass>org.techieworld.Main</mainClass>
+                   </manifest>
+                 </archive>
+               </configuration>
+               <executions>
+                 <execution>
+                   <id>make-assembly</id> 
+                   <phase>package</phase> 
+                   <goals>
+                     <goal>single</goal>
+                   </goals>
+                 </execution>
+               </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 
     <dependencies>
 
@@ -45,7 +83,13 @@
             <artifactId>quartz</artifactId>
             <version>1.5.2</version>
         </dependency>
-            
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+
+
     </dependencies>
 
 
