Implementing some initial Akka Interactions

--- a/db/conf/flyway.conf
+++ b/db/conf/flyway.conf
@@ -38,7 +38,9 @@
 # SQLite            : jdbc:sqlite:<database>
 # Sybase ASE        : jdbc:jtds:sybase://<host>:<port>/<database>
 # Redshift*         : jdbc:redshift://<host>:<port>/<database>
-flyway.url=jdbc:postgresql://localhost:5432/social
+#flyway.url=jdbc:postgresql://localhost:5432/social
+flyway.url=jdbc:postgresql://192.168.99.100:5432/social
+
 
 # Fully qualified classname of the JDBC driver (autodetected by default based on flyway.url)
 # flyway.driver=
