--- a/oxpecker_cleanup/pom.xml
+++ b/oxpecker_cleanup/pom.xml
@@ -54,10 +54,11 @@
             <artifactId>db-models</artifactId>
             <version>2.0-SNAPSHOT</version>
         </dependency>
+        <!--        Akka -->
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-actor_2.12</artifactId>
-            <version>2.5.24</version>
+            <version>${akka-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
