--- a/oxpecker_cleanup/src/main/resources/application.yml
+++ b/oxpecker_cleanup/src/main/resources/application.yml
@@ -19,7 +19,8 @@ spring:
   flyway:
     locations: classpath:db/migration
   datasource:
-    url: jdbc:postgresql://localhost:5432/social
+#    url: jdbc:postgresql://localhost:5432/social
+    url: jdbc:postgresql://192.168.99.100:5432/social
     username: social
     password: social
   data:
